[tool.poetry]
name = "pasjonsfrukt"
version = "0.2.5"
description = "Scrape PodMe podcast streams to mp3 and host with RSS feed"
authors = ["Mathias Oterhals Myklebust <mathias@oterbust.no>"]
readme = "README.md"
homepage = "https://github.com/mathiazom/pasjonsfrukt"
repository = "https://github.com/mathiazom/pasjonsfrukt"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mathiazom/pasjonsfrukt/issues"

[tool.poetry.scripts]
pasjonsfrukt = "pasjonsfrukt.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.8"
rfeed = "^1.1.1"
podme-api = "1.4.2"
uvicorn = "0.34.0"
typer = "0.15.1"
dataclass-wizard = {extras = ["yaml"], version = "0.35.0"}
asyncer = "0.0.8"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
poethepoet = "0.29.0"

[tool.poe.tasks.fmt]
cmd = "black pasjonsfrukt"
help = "Format code using black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
